# ARCOS

./: .gitattributes  .gitignore  Makefile  README.md
pipeline/: Makefile  README.md  pyproject.toml
pipeline/notebooks/: 01-wapo-api-probe.py  02-cdc-wonder-probe.py  03-dea-probe.py
pipeline/notes/: cdc.md  dea.md  wapo.md
pipeline/schemas/: cdc-overdose-by-county-year.schema.json  county-distributors.schema.json  county-metadata.schema.json  county-shipments-by-year.schema.json  dea-enforcement-actions.schema.json  search-index.schema.json  state-shipments-by-year.schema.json  top-distributors-by-year.schema.json  top-pharmacies.schema.json
pipeline/scripts/: validate_web_data.py
pipeline/sql/: cdc_overdose_by_county_year.sql  county_shipments_by_year.sql  county_top_distributors.sql  dea_enforcement.sql  search_index.sql  state_shipments_by_year.sql  top_distributors_by_year.sql  top_pharmacies.sql
pipeline/src/openarcos_pipeline/: __init__.py  aggregate.py  cli.py  config.py  emit.py  (+3 more)
pipeline/tests/: conftest.py  test_aggregate.py  test_cdc_clean_integration.py  test_cdc_runner.py  test_cdc_schema_match.py  test_census.py  test_clean_cdc.py  test_clean_dea.py  test_clean_integration.py  test_clean_wapo.py  test_cli.py  test_cli_join.py  test_config.py  test_e2e_all.py  test_e2e_through_aggregate.py  test_emit.py  test_fips.py  test_join.py  test_log.py  test_parquet_roundtrip.py  test_schema_roundtrip.py  test_schemas.py  test_scrolly_data_coverage.py  test_smoke.py  test_sources_cdc.py  test_sources_dea.py  test_sources_wapo.py  test_wapo_runner.py
(+312 files in other folders)
