[project]
name = "openarcos-pipeline"
version = "0.1.0"
description = "ETL for openarcos.org"
requires-python = ">=3.12,<3.13"
dependencies = [
    "polars~=1.0",
    "duckdb~=1.0",
    "httpx~=0.27",
    "tenacity~=9.0",
    "pdfplumber~=0.11",
    "jsonschema~=4.22",
    "typer~=0.12",
    "tqdm~=4.66",
]

[project.optional-dependencies]
dev = [
    "pytest~=8.2",
    "pytest-cov~=5.0",
    "ruff~=0.5",
]

[project.scripts]
openarcos = "openarcos_pipeline.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/openarcos_pipeline"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM", "RUF"]
